--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.2.0",
     "bcrypt": "^5.1.1",
+    "hbs": "^4.2.0",
     "mysql2": "^3.7.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
